# hospital

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  fly.toml  run_tests_docker.sh
.github/scripts/: semantic-release-cargo.js
.github/workflows/: docker-check-master.yml  pull-request.yml  release.yml  rust-tests.yml  test-lint-master.yml
emergency/: Cargo.toml  Dockerfile
emergency/src/: error_handler.rs  main.rs  schema.rs
emergency/src/ambulance/: mod.rs  models.rs  routes.rs  services.rs
emergency/src/ambulance/enums/: enum_ambulance.rs  mod.rs
emergency/src/components/: mod.rs
emergency/src/components/ambulance/: routes.rs  services.rs
emergency/src/components/emergency/: mod.rs  routes.rs  services.rs
emergency/src/components/emergency/schedule/: mod.rs  shceduler.rs
emergency/src/db/: config.rs
emergency/src/emergency/: allocation_emergency.rs  mod.rs  model.rs  routes.rs  services.rs
emergency/src/emergency/enums/: enum_emergency.rs  mod.rs
emergency/src/entity/: admission.rs  appointment.rs  bed.rs  card.rs  customers.rs  emergency.rs  hospital.rs  inventory.rs  prelude.rs  prescription.rs  prescription_order.rs  sea_orm_active_enums.rs  staff.rs  supplier.rs  treatment.rs
emergency/src/enums/: enum.rs  mod.rs
emergency/src/http_response/: create_response.rs  http_response_builder.rs  mod.rs  response_object.rs
emergency/src/open_api/: mod.rs
emergency/src/shared/: mod.rs
emergency/src/utils/: utils.rs
migration/: Cargo.toml
migration/src/: first_24_05_2025.rs  lib.rs  m20250524_000001_initial_setup.rs  m20250524_122219_update_dashboard.rs  m20250524_122220_update_dashboard.rs  m20250524_123225_make_userid_nullable.rs  m20250524_123751_add_timestamp_defaults.rs  m20250524_124017_update_card.rs  m20250526_073036_add_card_ic.rs  m20250528_000001_create_patient_table.rs  m20250528_100000_alter_patient_enum_columns.rs  m20250528_210000_add_ic_columns_if_missing.rs  m20250529_000001_create_emergency_patient_table.rs  m20250621_000001_add_person_table_and_refactor_patient_staff.rs  m20250621_100000_add_specialization_to_staff.rs  m20250623_100000_create_department_table.rs  m20250623_120000_alter_department_name_to_enum.rs  m20250623_130000_add_unique_indexes_patient_staff_department.rs  m20250722_000000_update_appointment_ids_to_uuid.rs  m20250916_000001_add_person_search_indexes.rs  m20250924_000001_create_user_profile.rs  m20250925_000001_create_auth_identity.rs  m20250925_010000_backfill_user_profile.rs  m20251004_000001_drop_staff_id_from_appointment.rs
scripts/: Cargo.toml  create_component.rs
scripts/src/components/person/: routes.rs  services.rs
src/: error_handler.rs  main.rs
src/components/: mod.rs
src/components/ambulance/: mod.rs  routes.rs  services.rs
src/components/appointment/: mod.rs  routes.rs  services.rs
src/components/auth_identity/: services.rs
src/components/card/: mod.rs  routes.rs  services.rs
src/components/config/: services.rs
src/components/dashboard/: routes.rs  services.rs
src/components/department/: routes.rs  services.rs
src/components/emergency/: allocation_emergency.rs  mod.rs  routes.rs  services.rs
src/components/emergency/schedule/: emergency_allocation.rs  mod.rs  shceduler.rs
src/components/hospital/: routes.rs  services.rs
src/components/me/: mod.rs  routes.rs  services.rs
src/components/patient/: routes.rs  services.rs
src/components/person/: routes.rs  services.rs
src/components/staff/: routes.rs  services.rs
src/db/: config.rs
src/entity/: admission.rs  ambulance.rs  amenities.rs  appointment.rs  auth_identity.rs  bed.rs  bill.rs  card.rs  customers.rs  dashboard.rs  department.rs  emergency.rs  emergency_patient.rs  guard.rs  hospital.rs  inventory.rs  medical_record.rs  mod.rs  patient.rs  patient_doctor.rs  patient_info.rs  person.rs  prelude.rs  prescription.rs  prescription_order.rs  room.rs  sea_orm_active_enums.rs  staff.rs  staff_schedule.rs  supplier.rs  treatment.rs  user_profile.rs
src/http_response/: create_response.rs  error_handler.rs  http_code_w.rs  http_response_builder.rs  mod.rs  token_claims.rs
src/open_api/: mod.rs
src/scripts/: Cargo.toml  create_component.rs
src/security/: jwt.rs  mod.rs  subject.rs
src/shared/: mod.rs  pagination_config.rs  permission_code.rs
src/shared/permissions/: appointment_create.rs  appointment_create_perm.rs  appointment_read_perm.rs  mod.rs  perm_marker.rs  require.rs
src/tests/: ambulance.rs  ambulance_status_test.rs  db_config.rs  db_test.rs  mod.rs  patient_test.rs  utils.rs  vehicle.rs
src/utils/: helpers.rs  mod.rs  utils.rs
