[package]
name = "emergency"
authors = ["Nechiforel David-Samuel (nsdHSO)<nechiforelsamuel@gmail.com>"]
version = "1.0.0"
license = "MIT"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
chrono = { version = "1.0.0"] }
dotenv = "0.15.0"
tokio = { version = "1.0.0"] }
env_logger = "0.11.8"
listenfd = "1.0.2"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.0.0"] }
nanoid = "0.4.0"
utoipa = { version = "1.0.0"] }
utoipa-swagger-ui = { version = "1.0.0"] }
sea-orm = { version = "1.0.0"] }
once_cell = "1.21.3"
percent-encoding = "2.3.1"
actix-cors = "0.7.1"
chrono-tz = "0.10.3"
