[package]
name = "emergency"
authors = ["Nechiforel David-Samuel (nsdHSO)<nechiforelsamuel@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
chrono = "0.4.41"
dotenv = "0.15.0"
bigdecimal = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
diesel_migrations = "2.2.0"
env_logger = "0.11.8"
lazy_static = "1.4"
listenfd = "1.0.2"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
diesel-derive-enum = "2.1.0"
