[package]
name = "emergency"
authors = ["Nechiforel David-Samuel (nsdHSO)<nechiforelsamuel@gmail.com>"]
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
bigdecimal = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-cron-scheduler = "0.13.0"
env_logger = "0.11.8"
lazy_static = "1.4"
listenfd = "1.0.2"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
r2d2 = "0.8"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
nanoid = "0.4.0"
utoipa = { version = "5.3.1", features = ["uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
once_cell = "1.21.3"

