[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"


[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12.0", features = [
   "sqlx-postgres",
   "runtime-tokio-rustls"
] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "serde_json"] } # Changed from 1.1.11 to 0.12.15