[package]
name = "hospital-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_component"
path = "create_component.rs"

[dependencies]
actix-web = "4"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
